Front end and Features

--- a/flashcard-backend/public/takeQuiz.html
+++ b/flashcard-backend/public/takeQuiz.html
@@ -7,6 +7,7 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
+      background-color: #B69DDD;
     }
     h2, h3 {
       text-align: center;
