logo and favicon

--- a/flashcard-backend/public/admin.html
+++ b/flashcard-backend/public/admin.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link rel="icon" href="/images/quickflashfav.png" type="image/png">
+
 <html>
 <head>
     <title>Admin Dashboard</title>
