--- a/flashcard-backend/public/index.html
+++ b/flashcard-backend/public/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link rel="icon" href="/images/quickflashfav.png" type="image/png">
+
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
