--- a/flashcard-backend/public/createQuiz.html
+++ b/flashcard-backend/public/createQuiz.html
@@ -3,6 +3,7 @@
 
 <html lang="en">
 <head>
+  <link rel="icon" href="/images/quickflashfav.png" type="image/png">
   <meta charset="UTF-8" />
   <title>Create a Quiz</title>
   <style>
