--- a/flashcard-backend/public/index.html
+++ b/flashcard-backend/public/index.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
 <head>
-  <link rel="icon" href="/images/quickflashfav.png" type="image/png">
+  <link rel="icon" href="/images/quickflashfav.ico" type="image/x-icon">
   <meta charset="UTF-8" />
   <title>Login / Register — Flashcard App</title>
   <style>
