--- a/flashcard-backend/public/sidebar.html
+++ b/flashcard-backend/public/sidebar.html
@@ -1,26 +1,22 @@
 <div id="sidebar">
-    
-    <div class="sidebar-item" onclick="window.location.href='/user.html'">
-        <span class="sidebar-icon">🏠</span><span class="label">Home</span>
-    </div>
-    <div class="sidebar-item"><span class="sidebar-icon">📚</span><span class="label">Your Library</span></div>
-    <div class="sidebar-item"><span class="sidebar-icon">🔔</span><span class="label">Notifications</span></div>
-    <hr style="width: 80%; border-color: #444;">
-    <div class="sidebar-item"><span class="sidebar-icon">➕</span><span class="label">New Folder</span></div>
-    <hr style="width: 80%; border-color: #444;">
-    <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
-        <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
-    </div>
-    <div class="sidebar-item" onclick="window.location.href='/aiFlashcards.html'">
-        <span class="sidebar-icon">🤖</span><span class="label">AI Flashcards</span>
-    </div>
-    <div class="sidebar-item" onclick="window.location.href='/takeQuiz.html'">
-        <span class="sidebar-icon">📄</span><span class="label">Study Guides</span>
-    </div>
-    <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
-        <span class="sidebar-icon">📝</span><span class="label">Quizzes</span>
-    </div>
-    <div class="sidebar-item" id="logoutButton">
-        <span class="sidebar-icon">🚪</span><span class="label">Logout</span>
-    </div>
+  <div class="sidebar-item" onclick="window.location.href='/user.html'">
+    <span class="sidebar-icon">🏠</span><span class="label">Home</span>
+  </div>
+  <div class="sidebar-item" onclick="window.location.href='/userFlashcards.html'">
+    <span class="sidebar-icon">🃏</span><span class="label">Flashcards</span>
+  </div>
+  <div class="sidebar-item" onclick="window.location.href='/aiFlashcards.html'">
+    <span class="sidebar-icon">🤖</span><span class="label">AI Flashcards</span>
+  </div>
+  <div class="sidebar-item" onclick="window.location.href='/createQuiz.html'">
+    <span class="sidebar-icon">📝</span><span class="label">Quizzes</span>
+  </div>
+
+  <!-- Add spacer to push logout to bottom -->
+  <div id="sidebar-spacer"></div>
+
+  <!-- Logout button -->
+  <div class="sidebar-item logout" id="logoutButton">
+    <span class="sidebar-icon">🚪</span><span class="label">Logout</span>
+  </div>
 </div>
