--- a/flashcard-backend/public/aiFlashcards.html
+++ b/flashcard-backend/public/aiFlashcards.html
@@ -149,7 +149,9 @@ input, select {
     }
 
     // load sidebar
-    fetch('/sidebar.html')
+    const sidebarPath = role === 'admin' ? '/adminSidebar.html' : '/sidebar.html';
+    
+    fetch(sidebarPath)
       .then(r => r.text())
       .then(html => {
         const sb = document.getElementById('sidebar-container');
