--- a/flashcard-backend/public/userFlashcards.html
+++ b/flashcard-backend/public/userFlashcards.html
@@ -353,7 +353,10 @@
 
 
 
-            fetch('/sidebar.html')
+            // Check if user is admin and load appropriate sidebar
+            const sidebarPath = role === 'admin' ? '/adminSidebar.html' : '/sidebar.html';
+            
+            fetch(sidebarPath)
             .then(response => response.text())
             .then(html => {
                     document.getElementById('sidebar-container').innerHTML = html;
